# so_stupid_search

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: main.rs
